--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,19 @@
   </head>
 
   <body>
+    <header class="header">
+      <div class="header__bar row">
+        <h1 class="grid-6"><a href="/">WeightManagement</a></h1>
+        <div class="user_nav grid-6">
+          <a class="post" href="/weights/new">体重入力</a>
+        </div>
+      </div>
+    </header>
     <%= yield %>
+        <footer>
+      <p>
+        Copyright WeightManagement 2020.
+      </p>
+    </footer>
   </body>
 </html>
